--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: 3.10  # Use a later version
+          architecture: x64
 
       - name: Install dependencies
         run: |
-          pip install --upgrade python-telegram-bot==20.7
-          pip install opencv-python==4.5.3.56
-          pip install mtcnn
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Set Telegram BOT token
         run: echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> $GITHUB_ENV
