--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.9
-          architecture: x64
+          python-version: 3.8
 
       - name: Install dependencies
         run: |
@@ -24,7 +23,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set Telegram BOT token
-        run: echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> $GITHUB_ENV
+        run: echo "YOUR_BOT_TOKEN=${{ secrets.YOUR_BOT_TOKEN }}" >> $GITHUB_ENV
 
       - name: Upgrade black
         run: python -m pip install --upgrade black
@@ -33,7 +32,6 @@ jobs:
         run: black .
 
       - name: Run bot
-        run: |
-          python doxspot.py
+        run: python doxspot.py
         env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          YOUR_BOT_TOKEN: ${{ secrets.YOUR_BOT_TOKEN }}
